fixed window overflowing cont

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2552,14 +2552,22 @@ html {
   align-items: center;
   justify-content: space-between;
   border-radius: 10px;
-  border-right: 2px solid red;
-}
-
-.active svg {
-  stroke: red;
 }
 
 @media (min-width: 1024px) {
+  .active {
+    background: hsl(224 15% 14%);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 10px;
+    border-right: 2px solid red;
+  }
+
+  .active svg {
+    stroke: red;
+  }
+
   #topGame .game-container {
     height: 400px;
   }
